Added Huntsville and Birmingham news source.

--- a/news_scraper.ipynb
+++ b/news_scraper.ipynb
@@ -82,7 +82,7 @@
     "        else:\n",
     "            final_fox_titles.append(i)\n",
     "            \n",
-    "    return final_fox_titles"
+    "    return list(set(final_fox_titles))"
    ]
   },
   {
@@ -109,7 +109,7 @@
     "    for i in new_titles:\n",
     "        cleaned_titles.append(i.text.rstrip().lstrip())\n",
     "        \n",
-    "    return cleaned_titles"
+    "    return list(set(cleaned_titles))"
    ]
   },
   {
@@ -137,110 +137,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[\"What Nick Saban had to say following Alabama's 41-24 win over Georgia and former Asst. Kirby Smart\",\n",
-       " 'How to get a good night’s sleep: Dear Annie',\n",
-       " \"Which Hard Seltzer Is The Best? | Bless Your RankMatt tackles the huge new craze of spiked seltzers. Watch him try as many as he can stand so you don't have to!\",\n",
-       " 'Woman indicted in crash that killed elderly Tuscaloosa couple48m',\n",
-       " 'Over 1,300 cast ballots in ‘historic’ Jeffco Saturday voting1h',\n",
-       " 'A few extra observations, context to Alabama’s win over GeorgiaAlabama beat No. 3 Georgia 41-24 on Saturday night. We take a second look at things every Sunday.23h',\n",
-       " 'Ratcliffe: NY Post’s Hunter Biden story isn’t Russian disinformation2h',\n",
-       " 'Auto supplier expanding in two Alabama cities, creating 182 jobsInternational Automotive Components is based in Luxembourg.6h',\n",
-       " 'Amber Alert cancelled; 2 Mississippi boys found safePolice officials say Kaiden Wall, 6, and Kolden Wall, 2, are safe and their mother, 33-year-old Sarah Lynn Caswell, is in custody.5h',\n",
-       " 'Madison County Confederate monument to be moved soon?6h',\n",
-       " 'Police: Man arrested after 5-year-old shoots self with father’s gunAntonio Francois, 30, was arrested on charges of reckless endangerment.56m',\n",
-       " 'Does Doug Jones support abortion ‘up until birth’?2h',\n",
-       " 'Alabama-Georgia rivalry inspires prank on ‘Idol’ set1h',\n",
-       " 'Dear Annie: Neighbor’s rude comment has upset my morning routine',\n",
-       " \"Gus Malzahn reviews Auburn's loss to South Carolina20h\",\n",
-       " \"New Biloxi resort could bring 2,500 jobs, open in 2023Biloxi mayor says UMusic Broadwater 'could be to the South what Atlantis is to the Bahamas'\",\n",
-       " 'SEC Insider: Alabama rocks Georgia to sleep, 41-24: Nick outsmarts Kirby5h',\n",
-       " \"How would a Sen. Tuberville serve if there’s no Trump?Tuberville's campaign strategy is to embrace the president and his agenda. But polling suggest that while Tuberville is a favorite to defeat ...9h\",\n",
-       " 'Dear Abby: Family friend fears young woman is addicted to met',\n",
-       " 'Alabama rapper Yung Bleu, superstar Drake release singleDrake adds verse to remix of Mobile native\\'s song \"You\\'re Mines Still\"',\n",
-       " 'Auburn beset by penalty problems through 4 weeks3h',\n",
-       " \"How is Alabama doing in the fight against COVID? Here's a look at the numbers5h\",\n",
-       " 'Locker room video shows raw emotion of beating Georgi',\n",
-       " 'Trader Joe’s already under construction in HuntsvilleThe popular grocery chain is expected to be a magnet to bring people to the Rocket City.4h',\n",
-       " 'UAH president meets, apologizes to Black teenThe teen\\'s mother said last week that her son was pulled over by a UAH campus officer who repeatedly asked whether he had \"crack\" or a \"dead ...1h',\n",
-       " 'Has Bo Nix regressed? Cole Cubelic weighs in4h',\n",
-       " 'Woman fatally mauled by pack of dogs in Walker County7m',\n",
-       " \"What Kirby Smart had to say following Georgia's 41-24 loss to AlabamaGeorgia head coach Kirby Smart addresses the media following the Bulldogs' 41-24 loss at Alabama.\",\n",
-       " 'Dear Annie: My wife has lost interest in being intimate and I’m nearing the end of my rope11h',\n",
-       " \"What Kirby Smart had to say following Georgia's 41-24 loss to Alab\",\n",
-       " 'Second stimulus check: Deadline nearsThe latest update on coronavirus stimulus payments.10h',\n",
-       " 'Stone Cold wants to have beers with 3 menSteve Austin is a huge college football fan.9h',\n",
-       " 'Reports: Tennessee fires D-line coach Jimmy Brumbaugh17h',\n",
-       " 'How the evacuation of a nursing home in Alabama spread coronavirusIn July, a nursing home overcome by coronavirus evacuated patients to Trussville, where the virus followed10h',\n",
-       " 'Police: Man says he has COVID, coughs on copJeffrey Bartlett, 33, was also arrested for driving under the influence.1h',\n",
-       " 'Tampa Bay trades for former Troy standoutThe Buccaneers have acquired nose tackle Steve McLendon from the New York Jets.3h',\n",
-       " \"Patrick Surtain and Najee Harris address the media Monday ahead of Alabama's trip to Tennessee2h\",\n",
-       " 'Alabama adds 859 coronavirus cases5h',\n",
-       " 'What was Tua Tagovailoa doing on field after his debut?The former Alabama All-American got his first NFL action with the Miami Dolphins on Sunday.18h',\n",
-       " \"Meet the chef who's making hot chicken cool in Alab\",\n",
-       " \"See Alabama fans swarm Strip, Walk of Champions before Georgia kickoffHere's what pregame looked like in Tuscaloosa.\",\n",
-       " 'SEC winners and losers of Week 4Every Monday, AL.com takes a look at the good and bad of the week in the SEC.7h',\n",
-       " \"Saban loved celebration, hates idea of big wins feeling routineThere was an emotional release following Alabama's win over Georgia on Saturday night.2h\",\n",
-       " \"Alabama libraries want to return post-pandemic worldAlabama's public library systems were among the first things to shut down during the pandemic and are still making their way back8h\",\n",
-       " 'D.J. Williams helping Tigers as he recovers1h',\n",
-       " 'For one Alabama senator, too little daycare regulation is still too much6h',\n",
-       " 'White House tells Tennessee ‘statewide mask mandate must be implemented’9h',\n",
-       " 'Dear Abby: Man’s distaste for girlfriend’s daughter, old photos, puts relationship in questionHis girlfriend often shows him pictures of her daughter asking \"Isn\\'t she cute?\"14h',\n",
-       " 'LSU QB Myles Brennan dealing with ‘significant’ injury4h',\n",
-       " 'Check out Tua Tagovailoa’s first NFL completion22h',\n",
-       " 'Brittany Smith talks about pleading guilty to shooting alleged rapistAn Alabama woman will be out of jail some time next spring. Rather than roll the dice at trial, where she could face up to life in prison if ...6h',\n",
-       " 'Hear what Nick Saban had to say Monday as the Tide prepares for a week 5 trip to Tennessee3h',\n",
-       " 'Isbell: Why not ask Beach Boys to ‘shut up and sing’?2h',\n",
-       " 'See the trailer: Viola Davis spot on in Netflix’s nod to Alabama blues legend2h',\n",
-       " \"Patrick Surtain and Najee Harris address the media Monday ahead of Alabama's trip to TennesseeAlabama DB Patrick Surtain and RB Najee Harris address the media Monday following the Crimson Tide's win over Georgia, as the team prepares for a week ...2h\",\n",
-       " 'Man armed with toy gun robbed Etowah County store, authorities sayAuthorities said Monday David Martin Coshatt was armed with a toy gun when he robbed Ball Play Grocery on Saturday. He is accused of holding the store ...37m',\n",
-       " 'Doctor sentenced to 15 years in pill mill case5h',\n",
-       " 'Dr. Scott Harris talks about plans for distributing COVID-19 vaccine',\n",
-       " \"Reba McEntire to star in 'Fried Green Tomatoes' TV show\",\n",
-       " 'Trump says Fauci is ‘a disaster’ in call to campaign staffers4h',\n",
-       " 'What Will Muschamp said after South Carolina upset AuburnWill Muschamp speaks to reporters after his South Carolina Gamecocks upset No. 15 Auburn on Saturday.',\n",
-       " 'Mystery of Rama Jama’s stolen script-A solved44m',\n",
-       " \"Statistically speaking: Auburn's passing attack lacking7h\",\n",
-       " 'Karson Logan Birthday Party',\n",
-       " 'SEC Insider: Auburn stumbles at South Carolina, drops out of Top-255h',\n",
-       " 'Dear Annie: How do I get over someone who has hurt me but I’m still in love with?',\n",
-       " 'Bham celebs to read bedtime stories for a good cause',\n",
-       " 'Mobile police looking for teen missing for over a month6h',\n",
-       " 'Mobile Greyhound Park settles case on fatal DUI crash7m',\n",
-       " 'Which Hard Seltzer Is The Best? | Bless Your Rank',\n",
-       " \"Dear Abby: Next door neighbor’s outside smoking seeps into their livesThey don't know the neighbors, but often get their second-hand smoke when windows are open\",\n",
-       " 'Saban: Dylan Moses played ‘extremely well’ vs. Georgia1h',\n",
-       " 'Where Alabama lands in national stat rankingsAlabama leads the nation in third-down offensive efficiency through four games.8h',\n",
-       " '‘Music can go places words cannot:’ Mobile Symphony takes the stageAfter making extensive COVID adjustments, orchestra finds an audience5h',\n",
-       " \"Alabama NFL roundup: Derrick Henry runs for 212 yardsOn the sixth Sunday of the NFL's 2020 season, 40 Alabama alumni got on the field.15h\",\n",
-       " \"Dear Annie: How should weddings be handled during a pandemic?In today's Dear Annie column, Annie Lane hears from a mom who is disappointed she won't be at her son's wedding.\",\n",
-       " \"Odds project Bama to make College Football PlayoffDespite a potential SEC championship game rematch, Alabama's odds to win the national championship shrunk significantly after beating Georgia.5h\",\n",
-       " \"Dear Abby: Wife is done being messenger between husband and his momWhen her mother-in-law can't get through to her son, she contacts his wife\",\n",
-       " 'Power 25: Crucial Top 10 matchups could reshape rankings5h',\n",
-       " 'The Mullet Toss is on: Quirky coastal event set for Oct. 23-25',\n",
-       " 'What Will Muschamp said after South Carolina upset Auburn',\n",
-       " 'Jeffrey Toobin suspended after exposing himself in Zoom meeting57m',\n",
-       " \"Auburn focuses on correcting trash talkAuburn football coach Gus Malzahn said it's not like his team to talk so much trash, and they're focused on correcting that.9h\",\n",
-       " 'Alabama opens as 3-score favorite over Tennessee22h',\n",
-       " '2 killed in separate weekend traffic crashes in Jefferson CountyThe Jefferson County Coroner’s Office on Monday identified the victims as Karen Jean Hickley, 57, and Kelly Louis Moss, 51.8h']"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "al_birmingham_scraper()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -249,11 +145,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Grab news from Huntsville\n"
+    "### Grab news from Huntsville\n",
+    "def whnt_scraper():\n",
+    "    whnt = urlopen('https://www.whnt.com/')\n",
+    "    whnt_soup = BeautifulSoup(whnt, 'html.parser')\n",
+    "    articles = whnt_soup.find_all(class_='article-list__article-title')\n",
+    "\n",
+    "    titles = []\n",
+    "    for i in articles:\n",
+    "        titles.append(i.text.lstrip().rstrip())\n",
+    "    \n",
+    "    return list(set(titles))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "huntsville_news = whnt_scraper()\n",
+    "add_headlines(huntsville_news, 'https://www.whnt.com/')"
    ]
   },
   {
@@ -333,11 +249,15 @@
    "source": [
     "def run_all():\n",
     "    al_headlines_main = al_data_title_scraper()\n",
-    "    add_headlines(al_headlines_main, 'www.al.com')\n",
+    "    add_headlines((al_headlines_main), 'www.al.com')\n",
     "    fox_10_headlines = fox_10_news_scraper()\n",
     "    add_headlines(fox_10_headlines, 'www.fox10tv.com')\n",
     "    wbrc_headlines = wbrc_scraper()\n",
     "    add_headlines(wbrc_headlines, 'www.wbrc.com/')\n",
+    "    birmingham_al = al_birmingham_scraper()\n",
+    "    add_headlines(al_birmingham_scraper(), 'https://www.al.com/birmingham/')\n",
+    "    huntsville_news = whnt_scraper()\n",
+    "    add_headlines(huntsville_news, 'https://www.whnt.com/')\n",
     "    \n",
     "    return 'Program has sucessfully scraped and saved the data.'"
    ]
@@ -371,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,16 +348,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1738"
+       "1852"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,16 +368,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "275"
+       "302"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,16 +388,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "47"
+       "48"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,16 +408,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "82"
+       "89"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,16 +428,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "75"
+       "79"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,16 +448,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1259"
+       "1334"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,11 +477,11 @@
     "\n",
     "# football_positions = ['QB','RB','FB','WR','OT','C','G','TE','DE','DT', 'LB', 'OLB', 'S', 'CB', 'FS']\n",
     "\n",
-    "football_words = ['Saban', 'ESPN', 'Alabama football', 'Tide', 'Tide', 'football', 'NFL', 'Auburn football',\n",
-    "                 'Nick Saban', 'cornerback', 'vs.', 'players', 'games', 'College Football']\n",
+    "# football_words = ['Saban', 'ESPN', 'Alabama football', 'Tide', 'Tide', 'football', 'NFL', 'Auburn football',\n",
+    "#                  'Nick Saban', 'cornerback', 'vs.', 'players', 'games', 'College Football']\n",
     "\n",
-    "crime_words = ['murder', 'shooting', 'killed', 'dead', 'injured', 'homicide', 'gunfire', 'injured', 'beaten', 'death',\n",
-    "              'arrested', 'abuse', 'charged']"
+    "# crime_words = ['murder', 'shooting', 'killed', 'dead', 'injured', 'homicide', 'gunfire', 'injured', 'beaten', 'death',\n",
+    "#               'arrested', 'abuse', 'charged']"
    ]
   }
  ],
