--- a/news_scraper.ipynb
+++ b/news_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,16 +163,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "huntsville_news = whnt_scraper()\n",
-    "add_headlines(huntsville_news, 'https://www.whnt.com/')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -181,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +263,7 @@
        "'Program has sucessfully scraped and saved the data.'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,18 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_str = ''\n",
-    "for i in all_titles:\n",
-    "    new_str = new_str + i + '\\n'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +304,10 @@
     "trump_titles = []\n",
     "saban_count = 0\n",
     "saban_titles = []\n",
+    "police_count = 0\n",
+    "police_titles = []\n",
+    "crime_count = 0\n",
+    "crime_titles = []\n",
     "misc_titles = []\n",
     "for i in set(all_titles):\n",
     "    if 'Alabama' in i:\n",
@@ -336,28 +319,28 @@
     "    elif 'Trump' in i:\n",
     "        trump_count += 1\n",
     "        trump_titles.append(i)\n",
-    "    elif 'COVID' in i:\n",
-    "        covid_count += 1\n",
-    "        covid_titles.append(i)\n",
-    "    elif 'Nick Saban' or 'Saban' in i:\n",
+    "    elif 'Saban' in i:\n",
     "        saban_count += 1\n",
     "        saban_titles.append(i)\n",
+    "    elif 'police' in i:\n",
+    "        police_count += 1\n",
+    "        police_titles.append(i)\n",
     "    else:\n",
     "        misc_titles.append(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1852"
+       "2085"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,16 +351,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "302"
+       "351"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,16 +371,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "48"
+       "50"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,36 +391,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "89"
+       "28"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "covid_count"
+    "saban_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "79"
+       "93"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,22 +431,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1334"
+       "44"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "saban_count"
+    "police_count"
    ]
   },
   {
