Another DC news scraper tested.

--- a/news_scraper.ipynb
+++ b/news_scraper.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
     }
    ],
    "source": [
-    "### Washington, DC news scraper\n",
+    "### Fox - Washington, DC news scraper\n",
     "wdc_fox = urlopen('https://www.fox5dc.com/')\n",
     "wdc_soup = BeautifulSoup(wdc_fox, 'html.parser')\n",
     "articles = wdc_soup.find_all('article')\n",
@@ -155,6 +155,91 @@
     "\n",
     "for i in articles:\n",
     "    print(re.sub('\\d\\d\\shours\\sago','',i.text).rstrip().lstrip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strong Winds to Make it Feel Like the 20s Monday Morning\n",
+      "Wife, Husband Die in Apparent Murder-Suicide in Centreville: Police\n",
+      "Police Investigating Package Explosion at House in Maryland\n",
+      "Campaign Draws to a Close With US Facing a Crossroads\n",
+      "DC Activist Groups Primed for Nov. 3 and Whatever Follows\n",
+      "Prince George's Police Investigating Teen's Death on Indian Head Highway\n",
+      "Trump Decries FBI Probe of Supporters Surrounding Biden Bus\n",
+      "Photos: Pro-Trump Car Caravan Hits the Beltway\n",
+      "Coronavirus in DC, Maryland, Virginia: What to Know on Nov. 1\n",
+      "7 Shot at Hotel Room Party in College Park\n",
+      "16-Year-Old Fatally Shot in Southeast DC\n",
+      "Here's How to Vote by Mail or in Person in DC, Maryland, Virginia and West Virginia\n",
+      "7 Shot at Hotel Room Party in College Park\n",
+      "Strong Winds to Make it Feel Like the 20s Monday Morning\n",
+      "Photos: Pro-Trump Car Caravan Hits the Beltway\n",
+      "Wife, Husband Die in Apparent Murder-Suicide in Centreville: Police\n",
+      "2 Dead, 2 Hurt After Shooting at Dale City House Party\n",
+      "WHO Chief Tedros to Quarantine After Contact Gets COVID-19\n",
+      "Fact Check: Trump's Errant Final Pitches on Virus, Energy\n",
+      "White House Blasts Fauci After He Says US ‘Poorly' Prepared for COVID-19 Winter\n",
+      "UK Says 4-Week Coronavirus Lockdown May Have to Last Longer\n",
+      "Trump Admin. Funds Plasma Company Based in Owner's Condo\n",
+      "Trump Says He'll Send in Lawyers to Review Swing State Votes as Soon as Election Ends\n",
+      "US Vote to Shape How World Warms as Climate Pact Exit Looms\n",
+      "Poll: Biden Bests Trump With Latino Voters by a 2-1 Margin\n",
+      "Biden Works to Push Black Voter Turnout in Campaign's Final Days\n",
+      "Road to 270: Biden Has Options, Trump Walks Narrow Path\n",
+      "Barrett to Join Supreme Court Arguments for the First Time\n",
+      "Tropical Storm Eta Nearly Hurricane, Aims at Central America\n",
+      "2 Children Rescued in Turkey as Quake Death Toll Reaches 81\n",
+      "Report: Britain's Prince William Had Coronavirus in April\n",
+      "Texas Supreme Court Denies GOP Effort to Reject Houston Area Drive-Thru Votes\n",
+      "More US Patients to Have Easy, Free Access to Doctor's Notes\n",
+      "Pregnant NJ Woman Killed by Shooter Who Waited Outside Her Home, Baby Survives\n",
+      "Thousands Protest in Jerusalem Against Israeli PM\n",
+      "From James Bond to ‘The Rock' a Look Back at Some of Sean Connery's Most Iconic Performances\n",
+      "This is What Will Decide Florida…and Likely the Presidential Race\n",
+      "Musician Zach Brandon Performs His New Song Reminding Us to ‘Live and Let Live'\n",
+      "Safety Tips for Trick-Or-Treating and Handing Out Candy on This Extra-Scary Halloween\n",
+      "Everything You Need to Know About San Francisco's CAREN Act That Criminalizes Racist 911 Calls\n",
+      "Maryland Senators Want to Question MVA About Transparency With COVID-19 Cases\n",
+      "State Elections Officials Prepared to Spot ‘Double Voters,' Caution Voter Fraud Is ‘Very Rare'\n",
+      "Nearly 100 Employees of Motor Vehicle Branches Tested Positive for COVID-19; 3 Dead\n",
+      "Voting Under Pandemic Pressure: COVID-19 Changes Election Processes, Voter Plans\n",
+      "I-Team Mail Test Shows On-Time Delivery Drops Headed Into Elections\n",
+      "70-Year-Old Pulled Out Alive in Turkey as Quake Toll Hits 75\n",
+      "Powerful Typhoon Lashes Philippines, Killing at Least 10\n",
+      "Covid-19 Antibodies Diminish Over Time, But Experts Say There's No Reason to Be Alarmed\n",
+      "Bodyguards on Demand: New Yorker Tests Out Private Security for Hire App\n",
+      "Tech CEOs Defend Social Media Moderation\n",
+      "Social Media CEOs Rebuff Bias Claims, Vow to Defend Election\n",
+      "Minority US Contact Tracers Build Trust in Diverse Cities\n",
+      "Fact Check: Trump Baselessly Cites Fraud in Virus Toll\n",
+      "England to Enter New Lockdown; UK Virus Cases Pass 1 Million\n",
+      "NFL Recommends Some Sideline Players Wear Masks During Games\n",
+      "MLB Says Turner Violated Protocols When He Returned to Field\n",
+      "Justin Turner Returns to Field for Dodgers' Celebration, Takes Off Mask After Testing Positive for COVID-19\n",
+      "Hidden History Weekend Starts Friday in West Virginia\n",
+      "Your 2020 Fireworks Finder: How to Safely Watch in DC, Maryland, Virginia\n",
+      "Virginia Ski Resort Opens With $1M in Upgrades\n",
+      "Police Accuse Maryland Man of Spraying Women in Stores\n",
+      "Ketchup Candy Canes Are the Christmas Treats No One Asked For\n",
+      "#ExeterSully: Young Pilot Hailed a Hero After Landing Plane on Pa. Highway\n"
+     ]
+    }
+   ],
+   "source": [
+    "### NBC - Washington, D.C. News Scraper\n",
+    "wdc_nbc4 = urlopen('https://www.nbcwashington.com/')\n",
+    "wdc_nbc4_soup = BeautifulSoup(wdc_nbc4, 'html.parser')\n",
+    "articles = wdc_nbc4_soup.find_all(class_='story-card__title')\n",
+    "\n",
+    "for i in articles:\n",
+    "    print(i.text.rstrip().lstrip())"
    ]
   },
   {
