Atlanta, GA news source prepared.

--- a/news_scraper.ipynb
+++ b/news_scraper.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,6 +237,82 @@
     "wdc_nbc4 = urlopen('https://www.nbcwashington.com/')\n",
     "wdc_nbc4_soup = BeautifulSoup(wdc_nbc4, 'html.parser')\n",
     "articles = wdc_nbc4_soup.find_all(class_='story-card__title')\n",
+    "\n",
+    "for i in articles:\n",
+    "    print(i.text.rstrip().lstrip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "President Trump holds rally in Rome with race deadlocked in Georgia\n",
+      "Kamala Harris campaigns in Gwinnett County, days ahead of election\n",
+      "DeKalb teen accused of raping 5 people he met on social media\n",
+      "2 killed, 1 injured in overnight shootings in Atlanta\n",
+      "First freeze warning of season in effect tonight\n",
+      "Former president Barack Obama to visit Atlanta for Biden the day before Election Day\n",
+      "PHOTOS: Atlanta gets creative on a very different Halloween\n",
+      "Must-see: Wellstar NICU babies dress up in adorable tiny Halloween costumes\n",
+      "Atlanta mayor declares State of Emergency as city continues Zeta cleanup\n",
+      "Bulldogs safety Richard LeCounte III injured in crash hours after starring in game\n",
+      "Atlanta-based company buys Dunkin Donuts for $11.3 billion\n",
+      "Exclusive WSB-TV poll shows president deadlocked, both Georgia senate races headed to runoff\n",
+      "Cherokee County man creates lawn maze in front yard for all to enjoy\n",
+      "Latest COVID-19 information for metro Atlanta\n",
+      "Coronavirus: New York changes visitor quarantine policy\n",
+      "Kroger pharmacies to offer rapid COVID-19 antibody tests in Georgia soon\n",
+      "Daylight saving time 2020: When do we set our clocks back?\n",
+      "Record-tying storm: Tropical Storm Eta becomes 28th named system of 2020\n",
+      "Sean Connery dead at 90: Celebs react\n",
+      "6-year-old inspires others with ABCs of career opportunities\n",
+      "Former president Barack Obama to visit Atlanta for Biden the day before Election Day\n",
+      "Exclusive WSB-TV poll shows president deadlocked, both Georgia senate races headed to runoff\n",
+      "WSB-TV debate between Perdue, Ossoff canceled after Perdue says he will campaign with Trump\n",
+      "Halloween events around Atlanta\n",
+      "PHOTOS: Around the lot at Netherworld Haunted House\n",
+      "PHOTOS: See wild horses, more at Greyfield Inn on Cumberland Island\n",
+      "What’s your favorite beer? Raise a glass to National American Beer Day\n",
+      "Want to swim with sharks? You can now do it right here in Atlanta\n",
+      "President Trump campaigning in Rome Sunday night\n",
+      "Democratic Vice Presidential nominee Kamala Harris campaigns in Gwinnett County\n",
+      "You can help stem the rising tide of Domestic Violence cases here in Georgia\n",
+      "Political season race to the finish line in Georgia\n",
+      "Georgia poll worker shares what experience has been like during early voting\n",
+      "Local company wants you to think twice before you throw away Halloween candy wrappers\n",
+      "Cleanup from Zeta continues in Metro Atlanta\n",
+      "A nice day with clouds slowly increasing during the afternoon\n",
+      "Nearly 4 million people in Georgia voted early, a record-breaking turnout\n",
+      "How fringe groups on both sides grew to influence, partly fuel today’s tense political tone\n",
+      "Tired of negative political ads every election? Experts say this is why you see so many of them\n",
+      "Federal report: Staffing, fraud attempts hinder unemployment claims processing\n",
+      "Former neighbor defends officer charged with shooting Rayshard Brooks\n",
+      "Bulldogs safety Richard LeCounte III injured in crash hours after starring in game\n",
+      "Williams scores 2 TDs, Notre Dame stifles Georgia Tech 31-13\n",
+      "Georgia high school football scores\n",
+      "Missouri, Florida scuffle on field at halftime in Swamp\n",
+      "PHOTOS: Around the lot at Netherworld Haunted House\n",
+      "PHOTOS: New shark exhibit opens at Georgia Aquarium\n",
+      "PHOTOS: Spooktacular Halloween decorations around metro Atlanta\n",
+      "PHOTOS: Georgia voters #PostThePeach to show off their state voting pride\n",
+      "PHOTOS: Pinewood Studios to become live, work, play community\n",
+      "Photos: Dodgers defeat Braves in NLCS Game 7 to reach World Series\n",
+      "PHOTOS: Local estates featured in popular movies, $9.8 million Sea Island home\n",
+      "PHOTOS: Channel 2 viewers send in photos of Joro spiders\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Atlanta, GA - WSB-TV\n",
+    "\n",
+    "wsb_tv2 = urlopen('https://www.wsbtv.com/')\n",
+    "wsb_tv2_soup = BeautifulSoup(wsb_tv2,'html.parser')\n",
+    "articles = wsb_tv2_soup.find_all(class_='unstyled-link')\n",
     "\n",
     "for i in articles:\n",
     "    print(i.text.rstrip().lstrip())"
