--- a/news_scraper.ipynb
+++ b/news_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "from urllib.request import urlopen\n",
     "from bs4 import BeautifulSoup\n",
-    "import re"
+    "import re\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -53,7 +54,7 @@
     }
    ],
    "source": [
-    "main.run_all()"
+    "# main.run_all()"
    ]
   },
   {
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,182 +452,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta_alabama = 0\n",
-    "alabama_titles = []\n",
-    "football_count = 0\n",
-    "football_titles = []\n",
-    "covid_count = 0\n",
-    "covid_titles = []\n",
-    "trump_count = 0\n",
-    "trump_titles = []\n",
-    "saban_count = 0\n",
-    "saban_titles = []\n",
-    "police_count = 0\n",
-    "police_titles = []\n",
-    "crime_count = 0\n",
-    "crime_titles = []\n",
-    "misc_titles = []\n",
-    "for i in set(all_titles):\n",
-    "    if 'Alabama' in i:\n",
-    "        meta_alabama +=1\n",
-    "        alabama_titles.append(i)\n",
-    "    elif 'football' in i:\n",
-    "        football_count += 1\n",
-    "        football_titles.append(i)\n",
-    "    elif 'Trump' in i:\n",
-    "        trump_count += 1\n",
-    "        trump_titles.append(i)\n",
-    "    elif 'Saban' in i:\n",
-    "        saban_count += 1\n",
-    "        saban_titles.append(i)\n",
-    "    elif 'police' in i:\n",
-    "        police_count += 1\n",
-    "        police_titles.append(i)\n",
-    "    else:\n",
-    "        misc_titles.append(i)"
+    "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
+    "from sklearn.decomposition import NMF, LatentDirichletAllocation\n",
+    "\n",
+    "def display_topics(model, feature_names, no_top_words):\n",
+    "    for topic_idx, topic in enumerate(model.components_):\n",
+    "        print (\"Topic %d:\" % (topic_idx))\n",
+    "        print (\" \".join([feature_names[i]\n",
+    "                        for i in topic.argsort()[:-no_top_words - 1:-1]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2085"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic 0:\n",
+      "trump biden president election perspectives associated press wake joe campaign\n",
+      "Topic 1:\n",
+      "alabama 2020 week football coronavirus school news state high sec\n",
+      "Topic 2:\n",
+      "alabama day huntsville team veterans win texas world weather saban\n",
+      "Topic 3:\n",
+      "covid 19 hurricane alabama caught positive home health act people\n",
+      "Topic 4:\n",
+      "vote officials alabama say hospitals count biscuit woman malzahn pop\n",
+      "Topic 5:\n",
+      "mobile election says gas drive safety absentee construction basketball coming\n",
+      "Topic 6:\n",
+      "man county year police old birmingham time killed real woman\n",
+      "Topic 7:\n",
+      "tuscaloosa suspect birmingham second eta car leads play center 28\n",
+      "Topic 8:\n",
+      "auburn new georgia schools game south gulf city power han\n",
+      "Topic 9:\n",
+      "life alabama annie culturedear dear abby lane husband van buren\n"
+     ]
     }
    ],
    "source": [
-    "len(set(all_titles))"
+    "no_features = 1000\n",
+    "\n",
+    "tf_vectorizer = CountVectorizer(max_df=0.95, min_df=2, max_features=no_features, stop_words='english')\n",
+    "tf = tf_vectorizer.fit_transform(titles)\n",
+    "tf_feature_names = tf_vectorizer.get_feature_names()\n",
+    "\n",
+    "no_topics = 20\n",
+    "lda = LatentDirichletAllocation(max_iter=5, learning_method='online', learning_offset=50.,random_state=0).fit(tf)\n",
+    "no_top_words = 10\n",
+    "display_topics(lda, tf_feature_names, no_top_words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "351"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "meta_alabama"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "football_count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "saban_count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "93"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trump_count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "44"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "police_count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "### There will be a few list that will make up the entire sports spectrum\n",
-    "### For example, there will be football words, baseball words, basketball words, etc.\n",
-    "\n",
-    "# football_positions = ['QB','RB','FB','WR','OT','C','G','TE','DE','DT', 'LB', 'OLB', 'S', 'CB', 'FS']\n",
-    "\n",
-    "# football_words = ['Saban', 'ESPN', 'Alabama football', 'Tide', 'Tide', 'football', 'NFL', 'Auburn football',\n",
-    "#                  'Nick Saban', 'cornerback', 'vs.', 'players', 'games', 'College Football']\n",
-    "\n",
-    "# crime_words = ['murder', 'shooting', 'killed', 'dead', 'injured', 'homicide', 'gunfire', 'injured', 'beaten', 'death',\n",
-    "#               'arrested', 'abuse', 'charged']"
-   ]
+   "source": []
   }
  ],
  "metadata": {
